tests/ui/issues/issue-33525.rs
fn main() {
    a; //~ ERROR cannot find value `a`
    "".lorem; //~ ERROR no field
    "".ipsum; //~ ERROR no field
}
